# mstsc-checker

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
.github/workflows/: npm-publish.yml
src/: lib.rs
