[package]
name = "ts-checker-rs-js"
version = "0.1.0"
description = "Checks for valid Windows Terminal Services credentials"
authors = ["TheRealMkadmi"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdp-rs = "0.1.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[profile.release]
debug-assertions = true